[package]
name = "webtech2016_gamekey_rust" # the name of the package
version = "0.0.1"    # the current version, obeying semver

[dependencies.rustless]
git = "https://github.com/rustless/rustless"

[dependencies]
rustc-serialize = "0.3"
valico = "0.8"
url = "0.5"
chrono = "0.2"
uuid = "0.2"
regex = "0.1"
params = "0.2.0"
rust-crypto = "0.2.35"
urlencoded = "0.3.0"
hyper = "0.8"
unicase = "1.0"

[dependencies.cookie]
version = "0.2"
default-features = false

[dependencies.iron]
version = "0.3"
